--- a/day11.html
+++ b/day11.html
@@ -48,7 +48,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚗 08:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%E6%96%AF%E5%A5%88%E5%B1%B1%E5%8D%8A%E5%B3%B6%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('前往斯奈山半島', '有「冰島縮影」之稱的半島。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%E6%96%AF%E5%A5%88%E5%B1%B1%E5%8D%8A%E5%B3%B6%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">前往斯奈山半島</div>
                 <div class="tl-desc">有「冰島縮影」之稱的半島。</div>
@@ -64,7 +67,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">📸 10:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%95%99%E6%9C%83%E5%B1%B1%20Kirkjufell%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('教會山 Kirkjufell', '冰島最容易被辨識的草帽山，欣賞完美的圓錐形山體與前方的瀑布。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E6%95%99%E6%9C%83%E5%B1%B1%20Kirkjufell%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">教會山 Kirkjufell</div>
                 <div class="tl-desc">冰島最容易被辨識的草帽山，欣賞完美的圓錐形山體與前方的瀑布。</div>
@@ -80,7 +86,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚶 13:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Dj%C3%BApal%C3%B3nssandur%20%E9%BB%91%E7%8F%8D%E7%8F%A0%E6%B2%99%E7%81%98%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('Djúpalónssandur 黑珍珠沙灘', '海灘散落著各種形狀的黑鵝卵石，還可以測試古代漁夫用來搬的「力量石」。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Dj%C3%BApal%C3%B3nssandur%20%E9%BB%91%E7%8F%8D%E7%8F%A0%E6%B2%99%E7%81%98%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">Djúpalónssandur 黑珍珠沙灘</div>
                 <div class="tl-desc">海灘散落著各種形狀的黑鵝卵石，還可以測試古代漁夫用來搬的「力量石」。</div>
@@ -96,7 +105,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚶 15:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Arnarstapi%20%E6%87%B8%E5%B4%96%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('Arnarstapi 懸崖', '在這裡觀賞壯麗的巨型海蝕洞與鳥類保護區。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Arnarstapi%20%E6%87%B8%E5%B4%96%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">Arnarstapi 懸崖</div>
                 <div class="tl-desc">在這裡觀賞壯麗的巨型海蝕洞與鳥類保護區。</div>
@@ -112,7 +124,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚗 16:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E8%BF%94%E5%9B%9E%E9%9B%B7%E5%85%8B%E9%9B%85%E7%B6%AD%E5%85%8B%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('返回雷克雅維克', '結束半島環遊，開車返回首都。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E8%BF%94%E5%9B%9E%E9%9B%B7%E5%85%8B%E9%9B%85%E7%B6%AD%E5%85%8B%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">返回雷克雅維克</div>
                 <div class="tl-desc">結束半島環遊，開車返回首都。</div>
@@ -128,7 +143,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🏨 19:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%85%A5%E4%BD%8F%E9%9B%B7%E5%85%8B%E9%9B%85%E7%B6%AD%E5%85%8B%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('入住雷克雅維克', '抵達並入住雷克雅維克的旅館。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E5%85%A5%E4%BD%8F%E9%9B%B7%E5%85%8B%E9%9B%85%E7%B6%AD%E5%85%8B%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">入住雷克雅維克</div>
                 <div class="tl-desc">抵達並入住雷克雅維克的旅館。</div>
@@ -187,6 +205,20 @@
 
         // Lucide Icons
         lucide.createIcons();
+
+        // 景點語音導覽
+        function speakText(title, desc) {
+            if ('speechSynthesis' in window) {
+                window.speechSynthesis.cancel(); // 停止先前的播放
+                var msg = new SpeechSynthesisUtterance("即將抵達" + title + "。 " + desc);
+                msg.lang = 'zh-TW';
+                msg.rate = 1.0; 
+                msg.pitch = 1.0;
+                window.speechSynthesis.speak(msg);
+            } else {
+                alert("您的瀏覽器不支援語音導覽功能。");
+            }
+        }
 
         // 滾動動畫
         document.addEventListener('DOMContentLoaded', () => {
