--- a/day12.html
+++ b/day12.html
@@ -48,7 +48,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚶 09:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%93%88%E7%88%BE%E6%A0%BC%E6%9E%97%E5%A7%86%E6%95%99%E5%A0%82%20Hallgr%C3%ADmskirkja%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('哈爾格林姆教堂 Hallgrímskirkja', '雷克雅維克地標，外型如玄武岩柱。可搭電梯到塔頂俯瞰。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E5%93%88%E7%88%BE%E6%A0%BC%E6%9E%97%E5%A7%86%E6%95%99%E5%A0%82%20Hallgr%C3%ADmskirkja%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">哈爾格林姆教堂 Hallgrímskirkja</div>
                 <div class="tl-desc">雷克雅維克地標，外型如玄武岩柱。可搭電梯到塔頂俯瞰。</div>
@@ -64,7 +67,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚶 10:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%BD%A9%E8%99%B9%E8%A1%97%20Sk%C3%B3lav%C3%B6r%C3%B0ust%C3%ADgur%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('彩虹街 Skólavörðustígur', '從教堂前方的彩虹步道開始探索各種小巧精美的設計店與咖啡館。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E5%BD%A9%E8%99%B9%E8%A1%97%20Sk%C3%B3lav%C3%B6r%C3%B0ust%C3%ADgur%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">彩虹街 Skólavörðustígur</div>
                 <div class="tl-desc">從教堂前方的彩虹步道開始探索各種小巧精美的設計店與咖啡館。</div>
@@ -80,7 +86,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚶 13:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Harpa%20%E9%9F%B3%E6%A8%82%E5%BB%B3%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('Harpa 音樂廳', '奪目的蜂巢玻璃建築，在陽光下閃爍動人光芒。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Harpa%20%E9%9F%B3%E6%A8%82%E5%BB%B3%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">Harpa 音樂廳</div>
                 <div class="tl-desc">奪目的蜂巢玻璃建築，在陽光下閃爍動人光芒。</div>
@@ -96,7 +105,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚶 15:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%A4%AA%E9%99%BD%E8%88%AA%E6%B5%B7%E8%80%85%20Sun%20Voyager%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('太陽航海者 Sun Voyager', '海濱的海盜船骨架雕塑，面朝著大海與雪山。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E5%A4%AA%E9%99%BD%E8%88%AA%E6%B5%B7%E8%80%85%20Sun%20Voyager%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">太陽航海者 Sun Voyager</div>
                 <div class="tl-desc">海濱的海盜船骨架雕塑，面朝著大海與雪山。</div>
@@ -112,7 +124,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🍽️ 18:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E7%B2%BE%E7%B7%BB%E5%86%B0%E5%B3%B6%E6%99%9A%E9%A4%90%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('精緻冰島晚餐', '挑選市區評價優良的餐廳享用傳統魚湯或羊肉。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E7%B2%BE%E7%B7%BB%E5%86%B0%E5%B3%B6%E6%99%9A%E9%A4%90%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">精緻冰島晚餐</div>
                 <div class="tl-desc">挑選市區評價優良的餐廳享用傳統魚湯或羊肉。</div>
@@ -171,6 +186,20 @@
 
         // Lucide Icons
         lucide.createIcons();
+
+        // 景點語音導覽
+        function speakText(title, desc) {
+            if ('speechSynthesis' in window) {
+                window.speechSynthesis.cancel(); // 停止先前的播放
+                var msg = new SpeechSynthesisUtterance("即將抵達" + title + "。 " + desc);
+                msg.lang = 'zh-TW';
+                msg.rate = 1.0; 
+                msg.pitch = 1.0;
+                window.speechSynthesis.speak(msg);
+            } else {
+                alert("您的瀏覽器不支援語音導覽功能。");
+            }
+        }
 
         // 滾動動畫
         document.addEventListener('DOMContentLoaded', () => {
