--- a/day2.html
+++ b/day2.html
@@ -48,7 +48,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🛬 06:55</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%8A%B5%E9%81%94%E6%B3%95%E8%98%AD%E5%85%8B%E7%A6%8F%20(FRA)%20%E8%BD%89%E6%A9%9F%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('抵達法蘭克福 (FRA) 轉機', '抵達法蘭克福，準備轉乘前往冰島的班機。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E6%8A%B5%E9%81%94%E6%B3%95%E8%98%AD%E5%85%8B%E7%A6%8F%20(FRA)%20%E8%BD%89%E6%A9%9F%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">抵達法蘭克福 (FRA) 轉機</div>
                 <div class="tl-desc">抵達法蘭克福，準備轉乘前往冰島的班機。</div>
@@ -64,7 +67,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🛫 11:10</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%90%AD%E4%B9%98%20LH844%20%E9%A3%9B%E5%BE%80%E5%86%B0%E5%B3%B6%20(KEF)%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('搭乘 LH844 飛往冰島 (KEF)', '飛往世界的盡頭。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E6%90%AD%E4%B9%98%20LH844%20%E9%A3%9B%E5%BE%80%E5%86%B0%E5%B3%B6%20(KEF)%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">搭乘 LH844 飛往冰島 (KEF)</div>
                 <div class="tl-desc">飛往世界的盡頭。</div>
@@ -80,7 +86,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🛬 12:55</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%8A%B5%E9%81%94%E5%87%B1%E5%A4%AB%E6%8B%89%E7%B6%AD%E5%85%8B%E5%9C%8B%E9%9A%9B%E6%A9%9F%E5%A0%B4%20(KEF)%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('抵達凱夫拉維克國際機場 (KEF)', '通過海關、提領行李後，前往租車櫃台取車。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E6%8A%B5%E9%81%94%E5%87%B1%E5%A4%AB%E6%8B%89%E7%B6%AD%E5%85%8B%E5%9C%8B%E9%9A%9B%E6%A9%9F%E5%A0%B4%20(KEF)%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">抵達凱夫拉維克國際機場 (KEF)</div>
                 <div class="tl-desc">通過海關、提領行李後，前往租車櫃台取車。</div>
@@ -96,7 +105,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚗 15:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%E9%9B%B7%E5%85%8B%E9%9B%85%E7%B6%AD%E5%85%8B%E5%B8%82%E5%8D%80%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('前往雷克雅維克市區', '熟悉冰島路況，開往首都。可在途中 Bónus 超市購買初步補給。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%E9%9B%B7%E5%85%8B%E9%9B%85%E7%B6%AD%E5%85%8B%E5%B8%82%E5%8D%80%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">前往雷克雅維克市區</div>
                 <div class="tl-desc">熟悉冰島路況，開往首都。可在途中 Bónus 超市購買初步補給。</div>
@@ -112,7 +124,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🏨 16:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%85%A5%E4%BD%8F%E5%B8%82%E5%8D%80%E4%BD%8F%E5%AE%BF%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('入住市區住宿', '抵達住宿，放好行李休息片刻。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E5%85%A5%E4%BD%8F%E5%B8%82%E5%8D%80%E4%BD%8F%E5%AE%BF%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">入住市區住宿</div>
                 <div class="tl-desc">抵達住宿，放好行李休息片刻。</div>
@@ -128,7 +143,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚶 18:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%B8%82%E5%8D%80%E6%BC%AB%E6%AD%A5%E8%88%87%E6%99%9A%E9%A4%90%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('市區漫步與晚餐', '漫步 Laugavegur 主街，吃著名的冰島熱狗 Bæjarins Beztu Pylsur。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E5%B8%82%E5%8D%80%E6%BC%AB%E6%AD%A5%E8%88%87%E6%99%9A%E9%A4%90%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">市區漫步與晚餐</div>
                 <div class="tl-desc">漫步 Laugavegur 主街，吃著名的冰島熱狗 Bæjarins Beztu Pylsur。</div>
@@ -189,6 +207,20 @@
 
         // Lucide Icons
         lucide.createIcons();
+
+        // 景點語音導覽
+        function speakText(title, desc) {
+            if ('speechSynthesis' in window) {
+                window.speechSynthesis.cancel(); // 停止先前的播放
+                var msg = new SpeechSynthesisUtterance("即將抵達" + title + "。 " + desc);
+                msg.lang = 'zh-TW';
+                msg.rate = 1.0; 
+                msg.pitch = 1.0;
+                window.speechSynthesis.speak(msg);
+            } else {
+                alert("您的瀏覽器不支援語音導覽功能。");
+            }
+        }
 
         // 滾動動畫
         document.addEventListener('DOMContentLoaded', () => {
