--- a/day4.html
+++ b/day4.html
@@ -48,7 +48,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚶 09:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%A1%9E%E9%87%8C%E9%9B%85%E8%98%AD%E7%80%91%E5%B8%83%20Seljalandsfoss%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('塞里雅蘭瀑布 Seljalandsfoss', '可繞到後方的水簾洞瀑布，一旁還有 Gljúfrabúi 隱藏瀑布。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E5%A1%9E%E9%87%8C%E9%9B%85%E8%98%AD%E7%80%91%E5%B8%83%20Seljalandsfoss%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">塞里雅蘭瀑布 Seljalandsfoss</div>
                 <div class="tl-desc">可繞到後方的水簾洞瀑布，一旁還有 Gljúfrabúi 隱藏瀑布。</div>
@@ -64,7 +67,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚶 11:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%96%AF%E7%A7%91%E5%8A%A0%E7%80%91%E5%B8%83%20Sk%C3%B3gafoss%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('斯科加瀑布 Skógafoss', '巨大的彩虹瀑布，可爬 527 階樓梯到頂端俯瞰。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E6%96%AF%E7%A7%91%E5%8A%A0%E7%80%91%E5%B8%83%20Sk%C3%B3gafoss%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">斯科加瀑布 Skógafoss</div>
                 <div class="tl-desc">巨大的彩虹瀑布，可爬 527 階樓梯到頂端俯瞰。</div>
@@ -80,7 +86,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚗 14:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Dyrh%C3%B3laey%20%E6%B5%B7%E5%B2%AC%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('Dyrhólaey 海岬', '黑沙灘全景與觀賞 Puffin（海鸚）的絕佳地點。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Dyrh%C3%B3laey%20%E6%B5%B7%E5%B2%AC%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">Dyrhólaey 海岬</div>
                 <div class="tl-desc">黑沙灘全景與觀賞 Puffin（海鸚）的絕佳地點。</div>
@@ -96,7 +105,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚶 15:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Reynisfjara%20%E9%BB%91%E6%B2%99%E7%81%98%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('Reynisfjara 黑沙灘', '世界著名的黑沙灘與玄武岩柱。浪大危險，請背向陸地遠離海水！')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Reynisfjara%20%E9%BB%91%E6%B2%99%E7%81%98%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">Reynisfjara 黑沙灘</div>
                 <div class="tl-desc">世界著名的黑沙灘與玄武岩柱。浪大危險，請背向陸地遠離海水！</div>
@@ -112,7 +124,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🏨 17:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%8A%B5%E9%81%94%E7%B6%AD%E5%85%8B%20V%C3%ADk%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('抵達維克 Vík', '入住冰島最南端的小鎮。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E6%8A%B5%E9%81%94%E7%B6%AD%E5%85%8B%20V%C3%ADk%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">抵達維克 Vík</div>
                 <div class="tl-desc">入住冰島最南端的小鎮。</div>
@@ -171,6 +186,20 @@
 
         // Lucide Icons
         lucide.createIcons();
+
+        // 景點語音導覽
+        function speakText(title, desc) {
+            if ('speechSynthesis' in window) {
+                window.speechSynthesis.cancel(); // 停止先前的播放
+                var msg = new SpeechSynthesisUtterance("即將抵達" + title + "。 " + desc);
+                msg.lang = 'zh-TW';
+                msg.rate = 1.0; 
+                msg.pitch = 1.0;
+                window.speechSynthesis.speak(msg);
+            } else {
+                alert("您的瀏覽器不支援語音導覽功能。");
+            }
+        }
 
         // 滾動動畫
         document.addEventListener('DOMContentLoaded', () => {
