--- a/day5.html
+++ b/day5.html
@@ -48,7 +48,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚗 09:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%20Skaftafell%20%E5%9C%8B%E5%AE%B6%E5%85%AC%E5%9C%92%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('前往 Skaftafell 國家公園', '沿著一號公路穿越苔原，進入瓦特納冰川國家公園區域。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%20Skaftafell%20%E5%9C%8B%E5%AE%B6%E5%85%AC%E5%9C%92%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">前往 Skaftafell 國家公園</div>
                 <div class="tl-desc">沿著一號公路穿越苔原，進入瓦特納冰川國家公園區域。</div>
@@ -64,7 +67,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🥾 10:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Svartifoss%20%E9%BB%91%E7%80%91%E5%B8%83%E5%81%A5%E8%A1%8C%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('Svartifoss 黑瀑布健行', '來回約 1.5 小時，欣賞被柱狀玄武岩包圍的獨特瀑布。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Svartifoss%20%E9%BB%91%E7%80%91%E5%B8%83%E5%81%A5%E8%A1%8C%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">Svartifoss 黑瀑布健行</div>
                 <div class="tl-desc">來回約 1.5 小時，欣賞被柱狀玄武岩包圍的獨特瀑布。</div>
@@ -80,7 +86,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚶 14:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=J%C3%B6kuls%C3%A1rl%C3%B3n%20%E5%86%B0%E6%B2%B3%E6%B9%96%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('Jökulsárlón 冰河湖', '夢幻的藍色冰山。可預約搭船在冰山之間近距離穿梭。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=J%C3%B6kuls%C3%A1rl%C3%B3n%20%E5%86%B0%E6%B2%B3%E6%B9%96%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">Jökulsárlón 冰河湖</div>
                 <div class="tl-desc">夢幻的藍色冰山。可預約搭船在冰山之間近距離穿梭。</div>
@@ -96,7 +105,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚶 16:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E9%91%BD%E7%9F%B3%E6%B2%99%E7%81%98%20Diamond%20Beach%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('鑽石沙灘 Diamond Beach', '冰河湖出海口旁，晶瑩剔透的冰塊散落在黑沙灘上。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E9%91%BD%E7%9F%B3%E6%B2%99%E7%81%98%20Diamond%20Beach%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">鑽石沙灘 Diamond Beach</div>
                 <div class="tl-desc">冰河湖出海口旁，晶瑩剔透的冰塊散落在黑沙灘上。</div>
@@ -112,7 +124,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🏨 18:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%E8%B5%AB%E6%9C%AC%20H%C3%B6fn%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('前往赫本 Höfn', '入住位於東南部的龍蝦小鎮 Höfn。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%E8%B5%AB%E6%9C%AC%20H%C3%B6fn%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">前往赫本 Höfn</div>
                 <div class="tl-desc">入住位於東南部的龍蝦小鎮 Höfn。</div>
@@ -171,6 +186,20 @@
 
         // Lucide Icons
         lucide.createIcons();
+
+        // 景點語音導覽
+        function speakText(title, desc) {
+            if ('speechSynthesis' in window) {
+                window.speechSynthesis.cancel(); // 停止先前的播放
+                var msg = new SpeechSynthesisUtterance("即將抵達" + title + "。 " + desc);
+                msg.lang = 'zh-TW';
+                msg.rate = 1.0; 
+                msg.pitch = 1.0;
+                window.speechSynthesis.speak(msg);
+            } else {
+                alert("您的瀏覽器不支援語音導覽功能。");
+            }
+        }
 
         // 滾動動畫
         document.addEventListener('DOMContentLoaded', () => {
