--- a/day6.html
+++ b/day6.html
@@ -48,7 +48,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚗 09:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%9D%B1%E9%83%A8%E5%B3%BD%E7%81%A3%E6%99%AF%E8%A7%80%E5%85%AC%E8%B7%AF%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('東部峽灣景觀公路', '沿海岸線蜿蜒前行，途徑寧靜的峽灣，留意路旁是否有野生馴鹿。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E6%9D%B1%E9%83%A8%E5%B3%BD%E7%81%A3%E6%99%AF%E8%A7%80%E5%85%AC%E8%B7%AF%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">東部峽灣景觀公路</div>
                 <div class="tl-desc">沿海岸線蜿蜒前行，途徑寧靜的峽灣，留意路旁是否有野生馴鹿。</div>
@@ -64,7 +67,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚶 11:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=F%C3%A1skr%C3%BA%C3%B0sfj%C3%B6r%C3%B0ur%20%E6%B3%95%E5%9C%8B%E5%B0%8F%E9%8E%AE%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('Fáskrúðsfjörður 法國小鎮', '街道充滿雙語標示，曾是法國漁民的基地。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=F%C3%A1skr%C3%BA%C3%B0sfj%C3%B6r%C3%B0ur%20%E6%B3%95%E5%9C%8B%E5%B0%8F%E9%8E%AE%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">Fáskrúðsfjörður 法國小鎮</div>
                 <div class="tl-desc">街道充滿雙語標示，曾是法國漁民的基地。</div>
@@ -80,7 +86,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚗 14:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Sey%C3%B0isfj%C3%B6r%C3%B0ur%20%E5%A1%9E%E6%BF%9F%E6%96%AF%E8%8F%B2%E5%8E%84%E6%BE%A4%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('Seyðisfjörður 塞濟斯菲厄澤', '被群山環繞的美麗彩虹步道小鎮，也是白日夢冒險王的滑板公路拍攝地。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Sey%C3%B0isfj%C3%B6r%C3%B0ur%20%E5%A1%9E%E6%BF%9F%E6%96%AF%E8%8F%B2%E5%8E%84%E6%BE%A4%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">Seyðisfjörður 塞濟斯菲厄澤</div>
                 <div class="tl-desc">被群山環繞的美麗彩虹步道小鎮，也是白日夢冒險王的滑板公路拍攝地。</div>
@@ -96,7 +105,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🏨 17:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Egilssta%C3%B0ir%20%E5%9F%83%E4%BC%8A%E7%88%BE%E6%96%AF%E5%A1%94%E6%BF%9F%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('Egilsstaðir 埃伊爾斯塔濟', '東部最大城鎮，進行物資補給，入住民宿。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Egilssta%C3%B0ir%20%E5%9F%83%E4%BC%8A%E7%88%BE%E6%96%AF%E5%A1%94%E6%BF%9F%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">Egilsstaðir 埃伊爾斯塔濟</div>
                 <div class="tl-desc">東部最大城鎮，進行物資補給，入住民宿。</div>
@@ -155,6 +167,20 @@
 
         // Lucide Icons
         lucide.createIcons();
+
+        // 景點語音導覽
+        function speakText(title, desc) {
+            if ('speechSynthesis' in window) {
+                window.speechSynthesis.cancel(); // 停止先前的播放
+                var msg = new SpeechSynthesisUtterance("即將抵達" + title + "。 " + desc);
+                msg.lang = 'zh-TW';
+                msg.rate = 1.0; 
+                msg.pitch = 1.0;
+                window.speechSynthesis.speak(msg);
+            } else {
+                alert("您的瀏覽器不支援語音導覽功能。");
+            }
+        }
 
         // 滾動動畫
         document.addEventListener('DOMContentLoaded', () => {
