--- a/day8.html
+++ b/day8.html
@@ -48,7 +48,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚶 09:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Hverir%20%E7%A1%AB%E7%A3%BA%E5%9C%B0%E7%86%B1%E5%8D%80%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('Hverir 硫磺地熱區', '像火星一般的地表，到處都是沸騰的泥漿與白煙。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Hverir%20%E7%A1%AB%E7%A3%BA%E5%9C%B0%E7%86%B1%E5%8D%80%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">Hverir 硫磺地熱區</div>
                 <div class="tl-desc">像火星一般的地表，到處都是沸騰的泥漿與白煙。</div>
@@ -64,7 +67,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚶 10:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Krafla%20%E7%81%AB%E5%B1%B1%E8%88%87%20V%C3%ADti%20%E7%81%AB%E5%B1%B1%E5%8F%A3%E6%B9%96%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('Krafla 火山與 Víti 火山口湖', '巨大的火山口湖，呈現夢幻的不透明翠綠色。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Krafla%20%E7%81%AB%E5%B1%B1%E8%88%87%20V%C3%ADti%20%E7%81%AB%E5%B1%B1%E5%8F%A3%E6%B9%96%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">Krafla 火山與 Víti 火山口湖</div>
                 <div class="tl-desc">巨大的火山口湖，呈現夢幻的不透明翠綠色。</div>
@@ -80,7 +86,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚶 13:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Dimmuborgir%20%E9%BB%91%E8%89%B2%E5%9F%8E%E5%A0%A1%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('Dimmuborgir 黑色城堡', '奇特的火山熔岩迷宮，傳說中聖誕老人的故鄉。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Dimmuborgir%20%E9%BB%91%E8%89%B2%E5%9F%8E%E5%A0%A1%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">Dimmuborgir 黑色城堡</div>
                 <div class="tl-desc">奇特的火山熔岩迷宮，傳說中聖誕老人的故鄉。</div>
@@ -96,7 +105,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚶 15:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Grj%C3%B3tagj%C3%A1%20%E6%B4%9E%E7%A9%B4%E6%BA%AB%E6%B3%89%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('Grjótagjá 洞穴溫泉', '隱藏的地下溫泉，冰與火之歌的經典場景。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Grj%C3%B3tagj%C3%A1%20%E6%B4%9E%E7%A9%B4%E6%BA%AB%E6%B3%89%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">Grjótagjá 洞穴溫泉</div>
                 <div class="tl-desc">隱藏的地下溫泉，冰與火之歌的經典場景。</div>
@@ -112,7 +124,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🏨 17:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E8%BF%94%E5%9B%9E%E7%B1%B3%E6%B9%96%E4%BD%8F%E5%AE%BF%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('返回米湖住宿', '在湖畔悠閒散步，休息。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E8%BF%94%E5%9B%9E%E7%B1%B3%E6%B9%96%E4%BD%8F%E5%AE%BF%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">返回米湖住宿</div>
                 <div class="tl-desc">在湖畔悠閒散步，休息。</div>
@@ -171,6 +186,20 @@
 
         // Lucide Icons
         lucide.createIcons();
+
+        // 景點語音導覽
+        function speakText(title, desc) {
+            if ('speechSynthesis' in window) {
+                window.speechSynthesis.cancel(); // 停止先前的播放
+                var msg = new SpeechSynthesisUtterance("即將抵達" + title + "。 " + desc);
+                msg.lang = 'zh-TW';
+                msg.rate = 1.0; 
+                msg.pitch = 1.0;
+                window.speechSynthesis.speak(msg);
+            } else {
+                alert("您的瀏覽器不支援語音導覽功能。");
+            }
+        }
 
         // 滾動動畫
         document.addEventListener('DOMContentLoaded', () => {
