--- a/day15.html
+++ b/day15.html
@@ -48,7 +48,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🏨 08:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%8F%90%E6%97%A9%E9%80%80%E6%88%BF%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('提早退房', '離開陪伴多日的住宿處，開車前往機場方向。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E6%8F%90%E6%97%A9%E9%80%80%E6%88%BF%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">提早退房</div>
                 <div class="tl-desc">離開陪伴多日的住宿處，開車前往機場方向。</div>
@@ -64,7 +67,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚗 09:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%87%B1%E5%A4%AB%E6%8B%89%E7%B6%AD%E5%85%8B%E9%82%84%E8%BB%8A%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('凱夫拉維克還車', '將車輛油箱加滿並完成還車手續，搭接駁車前往航廈。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E5%87%B1%E5%A4%AB%E6%8B%89%E7%B6%AD%E5%85%8B%E9%82%84%E8%BB%8A%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">凱夫拉維克還車</div>
                 <div class="tl-desc">將車輛油箱加滿並完成還車手續，搭接駁車前往航廈。</div>
@@ -80,7 +86,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🛂 11:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%A0%B1%E5%88%B0%E8%88%87%E6%89%8B%E7%BA%8C%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('報到與手續', '進行機場報到、退稅手續，隨後可在免稅店進行最後採購。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E5%A0%B1%E5%88%B0%E8%88%87%E6%89%8B%E7%BA%8C%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">報到與手續</div>
                 <div class="tl-desc">進行機場報到、退稅手續，隨後可在免稅店進行最後採購。</div>
@@ -96,7 +105,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🛫 14:20</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E7%8F%AD%E6%A9%9F%20LH845%20%E8%B5%B7%E9%A3%9B%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('班機 LH845 起飛', '帶著滿滿回憶與照片，飛離冰島 KEF，前往法蘭克福 FRA。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E7%8F%AD%E6%A9%9F%20LH845%20%E8%B5%B7%E9%A3%9B%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">班機 LH845 起飛</div>
                 <div class="tl-desc">帶著滿滿回憶與照片，飛離冰島 KEF，前往法蘭克福 FRA。</div>
@@ -112,7 +124,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🛬 19:50</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%8A%B5%E9%81%94%E6%B3%95%E8%98%AD%E5%85%8B%E7%A6%8F%E8%BD%89%E6%A9%9F%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('抵達法蘭克福轉機', '⚠️ 轉機時間僅 1 小時 50 分鐘，為避免安檢排隊，請下機後立刻尋找下個航班 LH796 的登機門。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E6%8A%B5%E9%81%94%E6%B3%95%E8%98%AD%E5%85%8B%E7%A6%8F%E8%BD%89%E6%A9%9F%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">抵達法蘭克福轉機</div>
                 <div class="tl-desc">⚠️ 轉機時間僅 1 小時 50 分鐘，為避免安檢排隊，請下機後立刻尋找下個航班 LH796 的登機門。</div>
@@ -128,7 +143,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🛫 21:40</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%90%AD%E7%8F%AD%E6%A9%9F%20LH796%20%E9%A3%9B%E5%BE%80%E9%A6%99%E6%B8%AF%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('搭班機 LH796 飛往香港', '搭乘夜航班返回亞洲。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E6%90%AD%E7%8F%AD%E6%A9%9F%20LH796%20%E9%A3%9B%E5%BE%80%E9%A6%99%E6%B8%AF%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">搭班機 LH796 飛往香港</div>
                 <div class="tl-desc">搭乘夜航班返回亞洲。</div>
@@ -187,6 +205,20 @@
 
         // Lucide Icons
         lucide.createIcons();
+
+        // 景點語音導覽
+        function speakText(title, desc) {
+            if ('speechSynthesis' in window) {
+                window.speechSynthesis.cancel(); // 停止先前的播放
+                var msg = new SpeechSynthesisUtterance("即將抵達" + title + "。 " + desc);
+                msg.lang = 'zh-TW';
+                msg.rate = 1.0; 
+                msg.pitch = 1.0;
+                window.speechSynthesis.speak(msg);
+            } else {
+                alert("您的瀏覽器不支援語音導覽功能。");
+            }
+        }
 
         // 滾動動畫
         document.addEventListener('DOMContentLoaded', () => {
