--- a/day3.html
+++ b/day3.html
@@ -48,7 +48,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚗 09:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%87%BA%E7%99%BC%E5%89%8D%E5%BE%80%E8%BE%9B%E6%A0%BC%E7%B6%AD%E5%88%A9%E7%88%BE%E5%9C%8B%E5%AE%B6%E5%85%AC%E5%9C%92%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('出發前往辛格維利爾國家公園', '約 45 分鐘車程抵達世界遺產辛格維利爾，板塊交界處。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E5%87%BA%E7%99%BC%E5%89%8D%E5%BE%80%E8%BE%9B%E6%A0%BC%E7%B6%AD%E5%88%A9%E7%88%BE%E5%9C%8B%E5%AE%B6%E5%85%AC%E5%9C%92%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">出發前往辛格維利爾國家公園</div>
                 <div class="tl-desc">約 45 分鐘車程抵達世界遺產辛格維利爾，板塊交界處。</div>
@@ -64,7 +67,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚶 10:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%8E%A2%E7%B4%A2%E8%BE%9B%E6%A0%BC%E7%B6%AD%E5%88%A9%E7%88%BE%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('探索辛格維利爾', '沿步道穿越 Almannagjá 裂縫，觀賞 Öxarárfoss 瀑布。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E6%8E%A2%E7%B4%A2%E8%BE%9B%E6%A0%BC%E7%B6%AD%E5%88%A9%E7%88%BE%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">探索辛格維利爾</div>
                 <div class="tl-desc">沿步道穿越 Almannagjá 裂縫，觀賞 Öxarárfoss 瀑布。</div>
@@ -80,7 +86,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚗 13:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Geysir%20%E9%96%93%E6%AD%87%E6%B3%89%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('Geysir 間歇泉', '觀賞 Strokkur 間歇泉每 5-8 分鐘噴發一次。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Geysir%20%E9%96%93%E6%AD%87%E6%B3%89%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">Geysir 間歇泉</div>
                 <div class="tl-desc">觀賞 Strokkur 間歇泉每 5-8 分鐘噴發一次。</div>
@@ -96,7 +105,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚗 15:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E9%BB%83%E9%87%91%E7%80%91%E5%B8%83%20Gullfoss%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('黃金瀑布 Gullfoss', '冰島最著名的雙層階梯式瀑布，非常壯觀。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=%E9%BB%83%E9%87%91%E7%80%91%E5%B8%83%20Gullfoss%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">黃金瀑布 Gullfoss</div>
                 <div class="tl-desc">冰島最著名的雙層階梯式瀑布，非常壯觀。</div>
@@ -112,7 +124,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚗 17:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Keri%C3%B0%20%E7%81%AB%E5%B1%B1%E5%8F%A3%E6%B9%96%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div style="display:flex;gap:8px;">
+                        <button class="nav-btn play-btn" onclick="speakText('Kerið 火山口湖', '回程或前往南岸途中繞道參觀彩色火山口湖。')" title="播放景點導覽"><i data-lucide="volume-2"></i> 導覽</button>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Keri%C3%B0%20%E7%81%AB%E5%B1%B1%E5%8F%A3%E6%B9%96%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    </div>
                 </div>
                 <div class="tl-title">Kerið 火山口湖</div>
                 <div class="tl-desc">回程或前往南岸途中繞道參觀彩色火山口湖。</div>
@@ -171,6 +186,20 @@
 
         // Lucide Icons
         lucide.createIcons();
+
+        // 景點語音導覽
+        function speakText(title, desc) {
+            if ('speechSynthesis' in window) {
+                window.speechSynthesis.cancel(); // 停止先前的播放
+                var msg = new SpeechSynthesisUtterance("即將抵達" + title + "。 " + desc);
+                msg.lang = 'zh-TW';
+                msg.rate = 1.0; 
+                msg.pitch = 1.0;
+                window.speechSynthesis.speak(msg);
+            } else {
+                alert("您的瀏覽器不支援語音導覽功能。");
+            }
+        }
 
         // 滾動動畫
         document.addEventListener('DOMContentLoaded', () => {
